
SET(APTO_CORE_SOURCES)

SET(CORE_DIR ${PROJECT_SOURCE_DIR}/src/core)
SET(CORE_SOURCES
  ${CORE_DIR}/FileSystem.cc
  ${CORE_DIR}/RefCount.cc
  ${CORE_DIR}/Thread.cc
)
SOURCE_GROUP(src\\core FILES ${CORE_SOURCES})
LIST(APPEND APTO_CORE_SOURCES ${CORE_SOURCES})

SET(PLATFORM_DIR ${PROJECT_SOURCE_DIR}/src/platform)
SET(PLATFORM_SOURCES
  ${PLATFORM_DIR}/Platform.cc
)
SOURCE_GROUP(src\\platform FILES ${PLATFORM_SOURCES})
LIST(APPEND APTO_CORE_SOURCES ${PLATFORM_SOURCES})

SET(STAT_DIR ${PROJECT_SOURCE_DIR}/src/stat)
SET(STAT_SOURCES
  ${STAT_DIR}/ContingencyTable.cc
  ${STAT_DIR}/FishersExact.cc
)
SOURCE_GROUP(src\\stat FILES ${STAT_SOURCES})
LIST(APPEND APTO_CORE_SOURCES ${STAT_SOURCES})

INCLUDE_DIRECTORIES(../include)

OPTION(APTO_LIB_SHARED
  "Build a dynamic shared library"
  ON
)
IF(APTO_LIB_SHARED)
  ADD_LIBRARY(aptoshared SHARED ${APTO_CORE_SOURCES})
  SET_TARGET_PROPERTIES(aptoshared PROPERTIES OUTPUT_NAME apto)
  IF(NOT MSVC)
    TARGET_LINK_LIBRARIES(aptoshared pthread)
  ENDIF(NOT MSVC)
  INSTALL(TARGETS aptoshared DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
  SET(aptoshared_BUILT 1 CACHE INTERNAL "")
ENDIF(APTO_LIB_SHARED)

OPTION(APTO_LIB_STATIC
  "Build a static library"
  ON
)
IF(APTO_LIB_STATIC)
  ADD_LIBRARY(aptostatic STATIC ${APTO_CORE_SOURCES})
  SET_TARGET_PROPERTIES(aptostatic PROPERTIES OUTPUT_NAME apto)
  IF(NOT MSVC)
    TARGET_LINK_LIBRARIES(aptoshared pthread)
  ENDIF(NOT MSVC)
  INSTALL(TARGETS aptostatic DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
  SET(aptostatic_BUILT 1 CACHE INTERNAL "")
ENDIF(APTO_LIB_STATIC)
